# signal-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  check.sh  docker-compose.yaml  pyproject.toml
signal-bot-api/: .dockerignore  Dockerfile  cot_builder.py  fts_sender.py  main.py  message_parser.py  pyproject.toml  signal_client.py
signal-bot-api/tests/: test_cot_builder.py  test_fts_sender.py  test_main.py  test_message_parser.py  test_signal_client.py
signal-bot-ui/: .dockerignore  Dockerfile  README.md  app.py  pyproject.toml
signal-bot-ui/templates/: base.html  docs.html  index.html  link.html
signal-bot-ui/tests/: test_app.py
