[tool.poetry]
name = "signal-bot-api"
version = "0.1.0"
description = "Signal bot that forwards messages to FreeTakServer as CoT"
authors = ["Roman Ivanets <roman.ivanets@sedric.ai>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
websocket-client = "^1.8.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4"
mypy = "^1.13"
bandit = {extras = ["toml"], version = "^1.7"}
pytest = "^8.2"
pytest-cov = "^5.0"
types-requests = "^2.32"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "S"]
ignore = ["S101", "S311"]  # allow assert in tests; random is fine here

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true

[tool.bandit]
skips = ["B101", "B104"]  # B101: assert in tests; B104: bind all interfaces (intentional in Docker)
